--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken.html">Roasted Chicken</a>
+    <ul>
+        <li><a href="recipes/chicken.html">Roasted Chicken</a></li>
+        <li><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
+        <li><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
+    </ul>
 </body>
 </html>
