Updated roasted chicken and cake images

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>One Bowl Chocolate Cake</h1>
-    <img src="../images/choco_cake.jpg" alt="One Bowl Chocolate Cake">
+    <img src="../images/choco_cake.jpeg" alt="One Bowl Chocolate Cake">
 
     <h2>Description</h2>
     <p>This is a rich and moist one bowl chocolate cake. It only takes a few minutes to prepare the batter. Frost with your favorite chocolate frosting.</p>
