--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -30,14 +30,13 @@
 
     <h2>Steps</h2>
     <ol>
-        <li><b>Wash the Chicken</b>
-            <p>Roasted chicken recipe is a simple yet delicious chicken dish, which can be prepared in a few minutes at the comfort of your home. Here’s how you can prepare this delicious recipe. Wash the chicken pieces and scoop out the stomach. Then wash it in the running water and drain out the excess water.</p></li>
-        <li><b>Marinate the Chicken</b>
-            <p>In the meantime, preheat the oven at 200 degree C. Then, take a small bowl and make the chicken marinade by using chilli, garlic, paprika, oregano, lemon zest, vinegar, oil, salt and pepper. Mix well to combine. You can add some spices and herbs as per your taste preference.</p></li>
-        <li><b>Bake it to perfection</b>
-            <p>Grease/ brush the baking tray with some oil. Then, place the chicken on the baking tray and pour over the chilli mixture and spread it all over to coat the chicken. Ensure the mixture is well coated. Now place the chicken in preheated oven and brush it well with some oil. Once the chicken is well coated, let it cook for 45 minutes or till done. Keep checking the chicken and if you find it to be too dry, brush it with some more oil.</p></li>
-        <li><b>Serve Hot</b>
-            <p>Remove from the oven, let it cool and garnish with chopped coriander leaves. You can also serve it with some creamy mashed potatoes, this will make it taste more delicious.</p></li>
+        <li>Wash the chicken pieces and scoop out the stomach.Then wash it in the running water and drain out the excess water.</li>
+        <li>In the meantime, preheat the oven at 200 degree C.</li>
+        <li>Then, take a small bowl and make the chicken marinade by using chilli, garlic, paprika, oregano, lemon zest, vinegar, oil, salt and pepper.</li>
+        <li>Mix well to combine.</li>
+        <li>You can add some spices and herbs as per your taste preference.</li>
+        <li>Bake the chicken for 45 minutes in the oven.</li>
+        <li>Remove the chicken from the oven and let it cool.After decorate it with coriander.</li>
     </ol>
 </body>
 </html>
