Styled odin-recipe into basic website

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Roasted Chicken</title>
 </head>
 <body>
     <h1>Roasted Chicken</h1>
     <img src="../images/roasted_chicken.jpeg" alt="Roasted Chicken">
 
-    <h2>Description</h2>
-    <p>The easy and classic roasted chicken ready to be served!</p>
+    <div class="description">
+        <h2>Description</h2>
+        <p>The easy and classic roasted chicken ready to be served!</p>
+    </div>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 kilogram chicken</li>
-        <li>1 teaspoon chiili flakes</li>
-        <li>1/2 teaspoon paprika</li>
-        <li>1 teaspoon lime zest</li>
-        <li>2 teaspoon canola oil/rapeseed oil</li>
-        <li>2 pinches powdered black pepper</li>
-        <li>4 cloves crushed garlic</li>
-        <li>1 teaspoon oregano</li>
-        <li>60 ml red wine vinegar</li>
-        <li>sea salt as required</li>
-        <li>2 handful chopped coriander leaves</li>
-    </ul>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul class="ul-ingredients">
+            <li>1 kilogram chicken</li>
+            <li>1 teaspoon chiili flakes</li>
+            <li>1/2 teaspoon paprika</li>
+            <li>1 teaspoon lime zest</li>
+            <li>2 teaspoon canola oil/rapeseed oil</li>
+            <li>2 pinches powdered black pepper</li>
+            <li>4 cloves crushed garlic</li>
+            <li>1 teaspoon oregano</li>
+            <li>60 ml red wine vinegar</li>
+            <li>sea salt as required</li>
+            <li>2 handful chopped coriander leaves</li>
+        </ul>
+    </div>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Wash the chicken pieces and scoop out the stomach.Then wash it in the running water and drain out the excess water.</li>
-        <li>In the meantime, preheat the oven at 200 degree C.</li>
-        <li>Then, take a small bowl and make the chicken marinade by using chilli, garlic, paprika, oregano, lemon zest, vinegar, oil, salt and pepper.</li>
-        <li>Mix well to combine.</li>
-        <li>You can add some spices and herbs as per your taste preference.</li>
-        <li>Bake the chicken for 45 minutes in the oven.</li>
-        <li>Remove the chicken from the oven and let it cool.After decorate it with coriander.</li>
-    </ol>
+    <div class="steps">
+        <h2>Steps</h2>
+        <ol class="steps ol-steps">
+            <li>Wash the chicken pieces and scoop out the stomach.Then wash it in the running water and drain out the excess water.</li>
+            <li>In the meantime, preheat the oven at 200 degree C.</li>
+            <li>Then, take a small bowl and make the chicken marinade by using chilli, garlic, paprika, oregano, lemon zest, vinegar, oil, salt and pepper.</li>
+            <li>Mix well to combine.</li>
+            <li>You can add some spices and herbs as per your taste preference.</li>
+            <li>Bake the chicken for 45 minutes in the oven.</li>
+            <li>Remove the chicken from the oven and let it cool.After decorate it with coriander.</li>
+        </ol>
+    </div>    
 </body>
 </html>
