--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>One Bowl Chocolate Cake</title>
 </head>
 <body>
     <h1>One Bowl Chocolate Cake</h1>
     <img src="../images/choco_cake.jpeg" alt="One Bowl Chocolate Cake">
 
-    <h2>Description</h2>
-    <p>This is a rich and moist one bowl chocolate cake. It only takes a few minutes to prepare the batter. Frost with your favorite chocolate frosting.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 cups white sugar</li>
-        <li>1 ¾ cups all-purpose flour</li>
-        <li>¾ cup unsweetened cocoa powder</li>
-        <li>1 ½ teaspoons baking powder</li>
-        <li>1 ½ teaspoons baking soda</li>
-        <li>1 teaspoon salt</li>
-        <li>2 eggs</li>
-        <li>1 cup milk</li>
-        <li>½ cup vegetable oil</li>
-        <li>2 teaspoons vanilla extract</li>
-        <li>1 cup boiling water</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 350 degrees F (175 degrees C). Grease and flour two nine inch round pans.</li>
-        <li>In a large bowl, stir together the sugar, flour, cocoa, baking powder, baking soda and salt.</li>
-        <li>Add the eggs, milk, oil and vanilla, mix for 2 minutes on medium speed of mixer.</li>
-        <li>Stir in the boiling water last. Batter will be thin. Pour evenly into the prepared pans.</li>
-        <li>Bake 30 to 35 minutes in the preheated oven, until the cake tests done with a toothpick.</li>
-        <li>Cool in the pans for 10 minutes, then remove to a wire rack to cool completely.</li>
-    </ol>
-
+    <div class="description">
+        <h2>Description</h2>
+        <p>This is a rich and moist one bowl chocolate cake. It only takes a few minutes to prepare the batter. Frost with your favorite chocolate frosting.</p>
+    </div>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul class="ul-ingredients">
+            <li>2 cups white sugar</li>
+            <li>1 ¾ cups all-purpose flour</li>
+            <li>¾ cup unsweetened cocoa powder</li>
+            <li>1 ½ teaspoons baking powder</li>
+            <li>1 ½ teaspoons baking soda</li>
+            <li>1 teaspoon salt</li>
+            <li>2 eggs</li>
+            <li>1 cup milk</li>
+            <li>½ cup vegetable oil</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>1 cup boiling water</li>
+        </ul>
+    </div>
+    
+    <div class="steps">
+        <h2>Steps</h2>
+        <ol class="ol-steps">
+            <li>Preheat oven to 350 degrees F (175 degrees C). Grease and flour two nine inch round pans.</li>
+            <li>In a large bowl, stir together the sugar, flour, cocoa, baking powder, baking soda and salt.</li>
+            <li>Add the eggs, milk, oil and vanilla, mix for 2 minutes on medium speed of mixer.</li>
+            <li>Stir in the boiling water last. Batter will be thin. Pour evenly into the prepared pans.</li>
+            <li>Bake 30 to 35 minutes in the preheated oven, until the cake tests done with a toothpick.</li>
+            <li>Cool in the pans for 10 minutes, then remove to a wire rack to cool completely.</li>
+        </ol>
+    </div>
 </body>
 </html>
