--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul class="recipe-nav">
-        <li><a href="recipes/chicken.html">Roasted Chicken</a></li>
-        <li><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
-        <li><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
-    </ul>
+    <div class="flex">
+        <ul class="recipe-nav">
+            <li class="flex card"><a href="recipes/chicken.html">Roasted Chicken</a></li>
+            <li class="flex card"><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
+            <li class="flex card"><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
+        </ul>
+    </div>
 </body>
 </html>
