Worked on nav page using flex

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <div class="flex">
-        <ul class="recipe-nav">
-            <li class="flex card"><a href="recipes/chicken.html">Roasted Chicken</a></li>
-            <li class="flex card"><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
-            <li class="flex card"><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
+    <div class="container">
+        <ul>
+            <li class="item"><a href="recipes/chicken.html">Roasted Chicken</a></li>
+            <li class="item"><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
+            <li class="item"><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
         </ul>
     </div>
 </body>
