Added card navigation in the home page using flex

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <div class="container">
-        <ul>
-            <li class="item"><a href="recipes/chicken.html">Roasted Chicken</a></li>
-            <li class="item"><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
-            <li class="item"><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
+    <div>
+        <ul class="card">
+            <li class="item"><img src="images/roasted_chicken.jpeg" alt="Roasted Chicken"><br><a href="recipes/chicken.html">Roasted Chicken</a></li>
+            <li class="item"><img src="images/choco_cake.jpeg" alt="Chocolate Cake"><br><a href="recipes/cake.html">One Bowl Chocolate Cake</a></li>
+            <li class="item"><img src="images/potato_pancake.jpeg" alt="Potato Pancake"><br><a href="recipes/pancake.html">Cheesy Potato Pancakes</a></li>
         </ul>
     </div>
 </body>
